add http:// buy default if it was not supplied